[project]
authors = [{ name = "quantity-dev contributors" }]
name = "metrology-apis"
requires-python = ">= 3.13"
version = "0.0.1.dev0"
dependencies = ["optype>=0.9.3,<0.10"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.pixi.workspace]
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
metrology-apis = { path = "." }
optype = ">=0.9.3,<0.10"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
pre-commit-hooks = "*"
taplo = "*"
ruff = "*"
mdformat = "*"
mdformat-ruff = "*"
basedpyright = "*"
basedmypy = "*"
numpydoc = "*"

[tool.pixi.feature.lint.tasks]
pyright = "basedpyright"
mypy = "mypy"
pre-commit = "pre-commit run --all-files"
lint = { depends-on = ["pre-commit", "mypy", "pyright"] }

[tool.pixi.environments]
lint = ["lint"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
hatchling = "==1.27.0"
python = ">=3.13"


[tool.mypy]
files = ["src"]
python_version = "3.13"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "truthy-bool"]
disable_error_code = ["explicit-any", "decorated-any"]


[tool.basedpyright]
include = ["src"]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "all"
reportExplicitAny = false


[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01", # most docstrings do not need an example
  "SA01", # most docstrings do not need a 'see also' section
  "ES01", # most docstrings do not need an extended summary
  "GL08", # TODO: add docstrings to all items
]
